--- a/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageTableViewCell.xib
+++ b/IOSModelBay/Views&Controllers/Notice/Views/MB_MessageTableViewCell.xib
@@ -1,41 +1,88 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="FUTURASTD-BOOK.OTF">
+            <string>FuturaStd-Book</string>
+            <string>FuturaStd-Book</string>
+        </mutableArray>
+        <mutableArray key="GOTHIC.TTF">
+            <string>CenturyGothic</string>
+            <string>CenturyGothic</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MB_MessageTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SM6-xb-lnM">
-                        <rect key="frame" x="0.0" y="11" width="75" height="78"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="SM6-xb-lnM">
+                        <rect key="frame" x="12" y="12" width="32" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="32" id="YOB-KH-u4N"/>
+                            <constraint firstAttribute="height" constant="32" id="qCz-sY-4HL"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQL-oa-Fkp">
-                        <rect key="frame" x="88" y="11" width="76" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQL-oa-Fkp">
+                        <rect key="frame" x="56" y="12" width="54.5" height="13"/>
+                        <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="13"/>
+                        <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="message:……" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKJ-bU-QLx">
-                        <rect key="frame" x="88" y="40" width="109" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message:cxzcxzczxczx\ndfdsf" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKJ-bU-QLx">
+                        <rect key="frame" x="56" y="34" width="159.5" height="13.5"/>
+                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="6h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lex-hO-i2h">
-                        <rect key="frame" x="292" y="8" width="20" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lex-hO-i2h">
+                        <rect key="frame" x="299" y="11" width="13" height="13.5"/>
+                        <fontDescription key="fontDescription" name="CenturyGothic" family="Century Gothic" pointSize="11"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kR-jP-Zqb">
+                        <rect key="frame" x="126" y="12" width="49" height="13"/>
+                        <fontDescription key="fontDescription" name="FuturaStd-Book" family="Futura Std" pointSize="13"/>
+                        <color key="textColor" red="1" green="0.30980392156862746" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_time" translatesAutoresizingMaskIntoConstraints="NO" id="c5d-tx-PZV">
+                        <rect key="frame" x="283" y="13" width="11" height="11"/>
+                    </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Lex-hO-i2h" secondAttribute="trailing" constant="8" id="1C7-ZF-lUT"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="bottom" constant="12" id="3Rs-h8-trn"/>
+                    <constraint firstItem="SM6-xb-lnM" firstAttribute="top" secondItem="GQL-oa-Fkp" secondAttribute="top" id="C3e-N0-HcA"/>
+                    <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="GQL-oa-Fkp" secondAttribute="centerY" id="E8g-Ji-Txo"/>
+                    <constraint firstItem="Lex-hO-i2h" firstAttribute="leading" secondItem="c5d-tx-PZV" secondAttribute="trailing" constant="5" id="K0o-1E-JlS"/>
+                    <constraint firstItem="oKJ-bU-QLx" firstAttribute="top" secondItem="GQL-oa-Fkp" secondAttribute="bottom" constant="9" id="KcB-iY-Vzn"/>
+                    <constraint firstItem="Lex-hO-i2h" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="5kR-jP-Zqb" secondAttribute="trailing" id="Qp2-xq-hWh"/>
+                    <constraint firstItem="Lex-hO-i2h" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="oKJ-bU-QLx" secondAttribute="trailing" id="RxX-JX-Fqd"/>
+                    <constraint firstItem="oKJ-bU-QLx" firstAttribute="leading" secondItem="GQL-oa-Fkp" secondAttribute="leading" id="f3g-Fv-KL1"/>
+                    <constraint firstItem="SM6-xb-lnM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="ibi-sA-wT2"/>
+                    <constraint firstItem="SM6-xb-lnM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="prz-eG-b95"/>
+                    <constraint firstItem="GQL-oa-Fkp" firstAttribute="leading" secondItem="SM6-xb-lnM" secondAttribute="trailing" constant="12" id="s74-i2-0tS"/>
+                    <constraint firstItem="5kR-jP-Zqb" firstAttribute="leading" secondItem="GQL-oa-Fkp" secondAttribute="trailing" constant="16" id="vfR-Vv-6q3"/>
+                    <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="c5d-tx-PZV" secondAttribute="centerY" id="wjc-ab-wXf"/>
+                    <constraint firstItem="Lex-hO-i2h" firstAttribute="centerY" secondItem="5kR-jP-Zqb" secondAttribute="centerY" id="xyt-nZ-TAM"/>
+                </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="Qp2-xq-hWh"/>
+                        <exclude reference="RxX-JX-Fqd"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="messageLabel" destination="oKJ-bU-QLx" id="vi6-Mi-4bx"/>
@@ -45,4 +92,8 @@
             </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="a.png" width="30" height="30"/>
+        <image name="ic_time" width="11" height="11"/>
+    </resources>
 </document>
